<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="left|start"
    android:background="#222"
    android:orientation="vertical"
    android:padding="@dimen/spacing_medium">

    <de.hdodenhof.circleimageview.CircleImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:src="@drawable/side_menu_user_pic"/>


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/spacing_small"
        android:text="@string/your_account"
        android:textColor="@color/colorPrimary"/>


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical"
        android:padding="@dimen/spacing_medium">


        <TextView
            style="@style/tvSideMenu"
            android:drawableStart="@drawable/icon_home"
            android:text="@string/home"/>

        <TextView
            style="@style/tvSideMenu"
            android:drawableStart="@drawable/date_posts"
            android:text="@string/date_posts"/>

        <TextView
            style="@style/tvSideMenu"
            android:drawableStart="@drawable/my_dates"
            android:text="@string/my_confirmed_dates"/>


        <TextView
            style="@style/tvSideMenu"
            android:drawableStart="@drawable/fav"
            android:text="@string/my_favourites"/>


        <TextView
            style="@style/tvSideMenu"
            android:drawableStart="@drawable/mmemberships"
            android:text="@string/membership"/>

        <TextView
            style="@style/tvSideMenu"
            android:drawableStart="@drawable/settings"
            android:text="@string/account_settings"/>

        <TextView
            android:id="@+id/tvLogout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/spacing_small"
            android:text="@string/logoutt"
            android:textColor="@color/colorPrimary"/>


    </LinearLayout>

    <ImageView
        android:id="@+id/ivCloseDrawer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/spacing_normal"
        android:src="@drawable/side_menu_exut"/>

</LinearLayout>