<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="@dimen/spacing_large"
        android:layout_marginEnd="@dimen/spacing_small"
        android:layout_marginStart="@dimen/spacing_tiny"
        android:orientation="vertical">


        <de.hdodenhof.circleimageview.CircleImageView
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:id="@+id/ivProfile"
            android:layout_width="96dp"
            android:layout_height="96dp"
            android:layout_gravity="center"
            android:src="@drawable/com_facebook_profile_picture_blank_square"
            app:civ_border_color="#FF000000"
            app:civ_border_width="2dp"/>


        <com.skeleton.util.customview.MaterialEditText
            android:id="@+id/etName"
            style="@style/EtTheme"
            android:hint="@string/name"
            android:inputType="textEmailAddress"
            android:paddingTop="@dimen/spacing_normal"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/dummyNumber"
                android:layout_width="35dp"
                android:layout_height="30dp"
                android:layout_alignEnd="@+id/view"
                android:layout_centerVertical="true"
                android:gravity="bottom"
                android:text="+91"
                android:textSize="20sp"/>

            <View
                android:id="@+id/view"
                android:layout_width="2dp"
                android:layout_height="25dp"
                android:layout_marginStart="50dp"
                android:layout_marginTop="8sp"
                android:background="@color/black"/>

            <com.skeleton.util.customview.MaterialEditText
                android:id="@+id/etPhoneNo"
                style="@style/EtTheme"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:hint="@string/contact_number"
                android:inputType="number"
                android:maxLength="@string/max_phone_no_length"
                android:paddingStart="0dp"/>


        </RelativeLayout>

        <com.skeleton.util.customview.MaterialEditText
            android:id="@+id/etDOB"
            style="@style/EtTheme"
            android:hint="@string/dob"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_small">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/spacing_normal"
                android:layout_marginStart="@dimen/spacing_tiny"
                android:layout_weight="1"
                android:text="@string/gender"
                android:textColor="@color/black"
                android:textSize="@dimen/spacing_normal"
                />

            <RadioGroup
                android:id="@+id/rgGender"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/rbMale"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/spacing_normal"
                    android:text="male"/>

                <RadioButton
                    android:id="@+id/rbFemale"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="female"/>
            </RadioGroup>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="@dimen/spacing_small"
            android:background="@color/black"/>

        <com.skeleton.util.customview.MaterialEditText
            android:id="@+id/etEmailAddr"
            style="@style/EtTheme"
            android:hint="@string/email_address"
            android:inputType="textEmailAddress"/>

        <com.skeleton.util.customview.MaterialEditText
            android:id="@+id/etPassword"
            style="@style/EtTheme"
            android:hint="@string/password"
            android:inputType="textPassword"/>

        <com.skeleton.util.customview.MaterialEditText
            android:id="@+id/etConfirmPassword"
            style="@style/EtTheme"
            android:hint="@string/confirm_password"
            android:inputType="textPassword"/>


        <CheckBox
            android:id="@+id/cbTermsAndCondi"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/i_accept"/>


        <Button
            android:id="@+id/btnSignUp"
            style="@style/btnTheme"
            android:layout_marginBottom="@dimen/spacing_small"
            android:layout_marginTop="@dimen/spacing_normal"
            android:background="@drawable/bg_green"
            android:text="@string/sign_up"/>

        <Button
            android:id="@+id/btnSignInWithFacebook"
            style="@style/btnTheme"
            android:layout_marginBottom="@dimen/spacing_normal"
            android:layout_marginTop="@dimen/spacing_small"
            android:layout_weight="1"
            android:background="@drawable/bg_blue"
            android:text="@string/sign_in_with_facebook"/>

    </LinearLayout>
</android.support.v4.widget.NestedScrollView>