<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="@color/white"
              android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/spacing_small"
                android:background="@drawable/background_parts">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="6dp"
                    android:src="@drawable/one_step"/>
            </RelativeLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin_large"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/view1"
                    style="@style/completeProfieViewBar"/>

                <TextView
                    android:id="@+id/view2"
                    style="@style/completeProfieViewBar"/>

                <TextView
                    android:id="@+id/view3"
                    style="@style/completeProfieViewBar"/>

                <TextView
                    android:id="@+id/view4"
                    style="@style/completeProfieViewBar"/>

                <TextView
                    android:id="@+id/view5"
                    style="@style/completeProfieViewBar"/>

                <TextView
                    android:id="@+id/view6"
                    style="@style/completeProfieViewBar"/>

                <TextView
                    android:id="@+id/view7"
                    style="@style/completeProfieViewBar"/>

            </LinearLayout>

            <com.skeleton.util.customview.MaterialEditText
                android:id="@+id/etRelationShip"
                style="@style/completeProfieEditText"
                android:hint="@string/relationship_history"
                />

            <com.skeleton.util.customview.MaterialEditText
                android:id="@+id/etEthnicity"
                style="@style/completeProfieEditText"
                android:hint="@string/ethnicity"

                />

            <com.skeleton.util.customview.MaterialEditText
                android:id="@+id/etReligon"
                style="@style/completeProfieEditText"
                android:hint="@string/religion"
                />

            <com.skeleton.util.customview.MaterialEditText
                android:id="@+id/etHeight"
                style="@style/completeProfieEditText"
                android:hint="@string/height"
                />

            <com.skeleton.util.customview.MaterialEditText
                android:id="@+id/etBodyType"
                style="@style/completeProfieEditText"
                android:hint="@string/body_type"
                />

            <com.skeleton.util.customview.MaterialEditText
                android:id="@+id/etSmoking"
                style="@style/completeProfieEditText"
                android:hint="@string/smoking"
                />

            <com.skeleton.util.customview.MaterialEditText
                android:id="@+id/etOrientation"
                style="@style/completeProfieEditText"
                android:hint="@string/orientation"
                />

            <Button
                android:id="@+id/btnNext"
                style="@style/primary_button"
                android:layout_margin="@dimen/margin_large"
                android:background="@drawable/bg_green"
                android:text="Next"/>
        </LinearLayout>

    </ScrollView>

</LinearLayout>